--- a/css/sampTwo.css
+++ b/css/sampTwo.css
@@ -54,7 +54,7 @@ min-height: 100vh;
   margin-bottom: 25px;
   padding-top: 20px;
   color: whitesmoke;
-  font-size: 14px;
+  font-size: 1rem;
   font-family: verdana;
   text-align: center;
 	
