--- a/css/sampTwo.css
+++ b/css/sampTwo.css
@@ -250,11 +250,20 @@ ul li a {
   font-family: verdana;
   font-size: 14px;
 }
-.socMed{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	gap: 1rem;
+.socMed i{
+        text-align: center;
+	float: left;
+	width: 36px;
+	height: 36px;
+	border: 1px solid #333;
+	border-radius: 100%;
+	margin-right: 7px; /*space between*/
+
+} 
+.socMed i{
+    font-size: 20px;
+    line-height: 34px;
+    color: #333;
 }
 .fa-facebook:hover{
 	opacity: 0.8;
@@ -280,7 +289,7 @@ ul li a {
   display: none;
   position: fixed;
   bottom: 20px;
-  right: 30px;
+  right: 20px;
   z-index: 99;
   border: none;
   outline: none;
